--- a/Biologik_sistematika.mw
+++ b/Biologik_sistematika.mw
@@ -1,6 +1,7 @@
 [[Biologiýa]] ylmynda '''biologik sistematika''' ýa-da '''ylmy klassifikasiýa''' biologlar tarapyndan organizmleri toparlara hem-de kategoriýalara bölmekde peýdalanylýan usuldyr.
 
 [[af:Wetenskaplike klassifikasie]]
+[[an:Clasificazión zentifica]]
 [[ang:Cræftlicu endebyrdung]]
 [[ar:تصنيف علمي]]
 [[bg:Класификация на организмите]]
